--- a/package.json
+++ b/package.json
@@ -1,8 +1,37 @@
 {
   "name": "root",
   "private": true,
-  "devDependencies": {
-    "lerna": "^5.1.8",
-    "nx": "14.4.2"
-  }
+  "author": "hyyyyyyy",
+  "version": "1.0.0",
+  "main": "index.js",
+  "dependencies": {
+    "ast-types-flow": "^0.0.7",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-types": "^6.26.0",
+    "check-types": "^11.1.2",
+    "eslint": "^8.19.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-module-utils": "^2.7.3",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-jest": "^25.7.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.5.1",
+    "eslint-scope": "^7.1.1",
+    "eslint-utils": "^3.0.0",
+    "eslint-visitor-keys": "^3.3.0",
+    "eslint-webpack-plugin": "^3.2.0",
+    "mime-types": "^2.1.35",
+    "prop-types": "^15.8.1"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "license": "ISC",
+  "description": ""
 }
