--- a/packages/reactBody/package.json
+++ b/packages/reactBody/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-body",
+  "name": "react_body",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +10,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "hy-react-demo": "*"
+    "header": "workspace:../reactHeader"
   },
   "scripts": {
     "start": "react-scripts start",
